package net.combatserver.protobuf; 
import "DataStructures.proto";

option optimize_for = SPEED;  

message GetZoneRequestData {
	required int32 zoneid = 1;//直接发送不使用proto
}
message GetZoneResponseData {
	required Zone zone = 1;
}
